dataset1235/2025-2/1955397009/users/2372342006/executions/1107611404_1927446959.log
== SUBMISSION (2025-08-21 13:22:19)
-- CODE: 
numero = float (input())

valor_1 = round(numero * 0.27),2)
valor_2 = round((numero + (numero * 0.42)),2)
valor_3 = round((numero + (numero * 0.63)),2)

print(valor_1)
print(valor_2)
print(valor_3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 3
    valor_1 = round(numero * 0.27),2)
                                    ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 3
    valor_1 = round(numero * 0.27),2)
                                    ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 3
    valor_1 = round(numero * 0.27),2)
                                    ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 3
    valor_1 = round(numero * 0.27),2)
                                    ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 3
    valor_1 = round(numero * 0.27),2)
                                    ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 3
    valor_1 = round(numero * 0.27),2)
                                    ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 13:23:38)
-- CODE: 
numero = float (input())

valor_1 = round((numero * 0.27),2)
valor_2 = round((numero + (numero * 0.42)),2)
valor_3 = round((numero - (numero * 0.63)),2)

print(valor_1)
print(valor_2)
print(valor_3)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 13:22:47)
-- CODE: 
numero = float (input())

valor_1 = round((numero * 0.27),2)
valor_2 = round((numero + (numero * 0.42)),2)
valor_3 = round((numero + (numero * 0.63)),2)

print(valor_1)
print(valor_2)
print(valor_3)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
200.72
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
40.75
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
530.73
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
5815.68
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
8844.71
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
19.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
